--- a/Codes/Main.ipynb
+++ b/Codes/Main.ipynb
@@ -11,12 +11,8 @@
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import glob\n",
-    "import shutil\n",
     "import pandas as pd\n",
-    "from PIL import Image\n",
     "from resizeimage import resizeimage\n",
-    "import cv2\n",
     "from iteration_utilities import unique_everseen"
    ]
   },
@@ -46,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "f22578f8",
    "metadata": {},
    "outputs": [
@@ -153,7 +149,7 @@
        "[3131 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff161be",
+   "id": "8d799312",
    "metadata": {},
    "source": [
     "sort_fits_files(df, source_folder, ext, na, nan_threshold=0.10)\n",
@@ -251,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2ffb2a66",
+   "id": "20ca1de3",
    "metadata": {},
    "outputs": [
     {
@@ -324,16 +320,14 @@
    "outputs": [],
    "source": [
     "# 4) Build DataFrame (clean set: names + recta by default)\n",
-    "df_clean = build_data_table(\n",
-    "    base_path=SorceF, results=results,\n",
-    "    ext_used=Ext[1], ext_list=Ext, survey_list=Survey,\n",
+    "df_clean = build_data_table(base_path=SorceF, results=results, ext_used=Ext[1], ext_list=Ext, survey_list=Survey,\n",
     "    include_path=False, include_category=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a26fe12a",
+   "id": "4d2614b5",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +487,7 @@
    "outputs": [],
    "source": [
     "#df_clean\n",
-    "out_path = \"cornish.p\""
+    "out_path = \"cornish.p\" "
    ]
   },
   {
